[Project Implementation] Project Structure Implemented along with functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<header class="app-header">
+    <h1 class="app-header-title">Movie Trailer Player</h1>
+</header>
+<main class="main-container">
+    <router-outlet></router-outlet>
+</main>
