--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,1 +1,18 @@
-<p>video-player works!</p>
+<div class="main-page">
+    <section class="trailer-video-container">
+        <h2 class="trailer-header">
+            {{selectedVideo.name | uppercase}} | {{selectedVideo.year}}
+        </h2>
+        <iframe width="100%" 
+            height="100%" 
+            frameborder="0" 
+            [src]="setTrailerUrl()">
+        </iframe>
+    </section>
+    <section class="poster-carousel">
+        <app-poster-carousel
+            [poster-data]="movieVideoData"
+            (selected-video-data)="setSelectedTrailer($event)">
+        </app-poster-carousel>
+    </section>
+</div>
