[Custom Pipe and Toaster] Implementation Complete

--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,7 +1,7 @@
 <div class="main-page">
     <section class="trailer-video-container">
         <h2 class="trailer-header">
-            {{selectedVideo.name | uppercase}} | {{selectedVideo.year}}
+            {{selectedVideo.name | chartouppercase}} | {{selectedVideo.year}}
         </h2>
         <iframe width="100%" 
             height="100%" 
