--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,25 @@ body, h1, h2, figure {
     margin: 0;
     padding: 0;
 }
+
+#toast-container > div {
+    opacity:1;
+}
+
+.toast {
+    font-size: initial !important;
+    border: initial !important;
+    backdrop-filter: blur(0) !important;
+  }
+  .toast-success {
+    background-color: #51A351 !important;
+  }
+  .toast-error {
+    background-color: #BD362F !important;
+  }
+  .toast-info {
+    background-color: #2F96B4 !important;
+  }
+  .toast-warning {
+    background-color: #F89406 !important;
+  }
